<resources>
    <string name="app_name">Cloudy</string>
    <string name="close" translatable="false">close</string>
    <string name="open" translatable="false">open</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="app_settings">App Settings</string>
    <string name="initial_setup">Initial Setup</string>
    <string name="language">Language</string>
    <string name="location">Location</string>
    <string name="temperature">Temperature</string>
    <string name="wind_speed">Wind Speed</string>
    <string name="english">English</string>
    <string name="arabic">Arabic</string>
    <string name="gps">GPS</string>
    <string name="map">Map</string>
    <string name="kelvin">kelvin</string>
    <string name="celsius">celsius</string>
    <string name="fehrenheit">fehrenheit</string>
    <string name="meter_sec">meter/sec</string>
    <string name="miles_hour">miles/hour</string>
    <string name="DONE">DONE</string>
    <string name="home">home</string>
    <string name="settings">settings</string>
    <string name="favorite">Favorite</string>
    <string name="alerts">Alerts</string>
    <string name="how_do_you_want_to_choose_location">How do you want to choose location</string>
    <string name="shared_prefs" translatable="false">sharedPrefs</string>
    <string name="today">Today</string>
    <string name="now">Now</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="yes">yes</string>
    <string name="no">no</string>
    <string name="do_you_want_to_choose_this_place">"Do you want to choose this place? "</string>
    <string name="toast_deleted">This Place is Deleted</string>
    <string name="you_are_offline">You are offline. Some functionality may be unavailable.</string>
    <string name="fav_locations">Favorite Locations</string>
    <string name="set_start_date">set start date</string>
    <string name="set_end_date">set end date</string>
    <string name="set_alert_time">set alert time</string>
    <string name="save">save</string>
    <string name="end_after_start">end date must come after start date</string>
    <string name="fill_all_fields">Please fill all the fields</string>
    <string name="turn_on_location">Please turn on your location</string>
    <string name="permission_required">Location Permission is Required</string>
</resources>